Create no_rocm_image_ubuntu24_04_extended image
ROCgdb needs a few more packages for running its testsuite and having the
wanted coverage. That includes dejagnu, gcc, g++, gfortran and make.

Create an extension of the original no_rocm_image_ubuntu24_04 image and
extend it with the required packages.

Create .github workflows to publish a new image after updates. Also publish
a new image when the original no_rocm_image_ubuntu24_04 image is modified.

--- a/.github/workflows/publish_no_rocm_image_ubuntu24_04_extended.yml
+++ b/.github/workflows/publish_no_rocm_image_ubuntu24_04_extended.yml
@@ -1,4 +1,4 @@
-name: Publish no_rocm_image_ubuntu24_04 images
+name: Publish no_rocm_image_ubuntu24_04_extended images
 on:
   workflow_dispatch:
   push:
@@ -6,19 +6,14 @@ on:
       - 'main'
       - 'stage/docker/**'
     paths:
-      - dockerfiles/no_rocm_image_ubuntu24_04*.Dockerfile
-      - .github/workflows/publish_no_rocm_image_ubuntu24_04.yml
+      - dockerfiles/no_rocm_image_ubuntu24_04_extended.Dockerfile
+      - .github/workflows/publish_no_rocm_image_ubuntu24_04_extended.yml
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  publish_no_rocm_image_ubuntu24_04:
-    uses: ./.github/workflows/publish_dockerfile.yml
-    with:
-      DOCKER_FILE_NAME: no_rocm_image_ubuntu24_04
-      DOCKER_IMAGE_NAME: no_rocm_image_ubuntu24_04
   publish_no_rocm_image_ubuntu24_04_extended:
     uses: ./.github/workflows/publish_dockerfile.yml
     with:
