turn off rocprofiler-sdk samples.

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -121,6 +121,7 @@ endif(THEROCK_BUILD_TESTING)
       -DROCPROFILER_BUILD_CI=ON
       -DROCPROFILER_BUILD_TESTS=ON
       -DROCPROFILER_BUILD_INTEGRATION_TESTS=OFF
+      -DROCPROFILER_BUILD_SAMPLES=OFF
       -DCMAKE_PREFIX_PATH="${THEROCK_BINARY_DIR}/dist/rocm"
       -DROCM_PATH="${THEROCK_BINARY_DIR}/dist/rocm"
       -DROCPROFILER_PYTHON_VERSIONS:STRING="${_detected_python_versions_str}"
