--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -32,6 +32,14 @@ on:
         description: rocm-jax repository ref/branch to check out
         required: false
         type: string
+      jax_version:
+        description: "Base JAX version (e.g. 0.8.0) for installing jax from PyPI. Extracted from built wheels by write_jax_versions.py."
+        required: false
+        type: string
+      jaxlib_version:
+        description: "Full jaxlib version including rocm suffix (e.g. 0.8.0+rocm7.12.0). Extracted from built wheels by write_jax_versions.py."
+        required: false
+        type: string
       ref:
         description: "Branch, tag or SHA to checkout. Defaults to the reference or SHA that triggered the workflow."
         type: string
@@ -84,6 +92,14 @@ on:
         required: false
         type: string
         default: "rocm-jaxlib-v0.8.0"
+      jax_version:
+        description: "Base JAX version (e.g. 0.8.0). Leave empty to auto-detect from rocm-jax requirements."
+        required: false
+        type: string
+      jaxlib_version:
+        description: "Full jaxlib version with rocm suffix (e.g. 0.8.0+rocm7.12.0). Leave empty to auto-compute from rocm_version."
+        required: false
+        type: string
       test_runs_on:
         description: Runner label to use. The selected runner should have a GPU supported by amdgpu_family
         required: true
@@ -175,29 +191,34 @@ jobs:
             --artifact-group "${{ inputs.amdgpu_family }}" \
             --output-dir "${DEST}"
 
-      - name: Extract JAX version and set to GITHUB_ENV
+      - name: Determine JAX package versions
         run: |
-          # Extract JAX version from requirements.txt (e.g., "jax==0.8.0")
-          # Remove all whitespace from requirements.txt to simplify parsing
-          # Search for lines starting with "jax==" or "jaxlib==" followed by version (excluding comments)
-          # Extract the version number by splitting on '=' and taking the 3rd field
-          # [^#]+ matches one or more characters that are NOT '#', ensuring we stop before any inline comments
-          JAX_VERSION=$(tr -d ' ' < jax/build/requirements.txt \
-          | grep -E '^(jax|jaxlib)==[^#]+' | head -n1 | cut -d'=' -f3)
-          echo "JAX_VERSION=$JAX_VERSION" >> "$GITHUB_ENV"
-          # Sanitize rocm_version: replace '+' with '.' for PEP 440 compliance
-          # (local version label can only contain alphanumerics and periods)
-          SANITIZED_ROCM_VERSION=$(echo "${{ inputs.rocm_version }}" | tr '+' '.')
-          echo "PACKAGE_VERSION=${JAX_VERSION}+rocm${SANITIZED_ROCM_VERSION}" >> "$GITHUB_ENV"
+          # Use versions passed from the build workflow when available.
+          # For manual workflow_dispatch, compute the version suffix using
+          # compute_jax_package_version.py (matches rocm-jax ci_build format).
+          if [ -n "${{ inputs.jaxlib_version }}" ] && [ -n "${{ inputs.jax_version }}" ]; then
+            echo "Using versions passed from build workflow"
+            echo "JAXLIB_VERSION=${{ inputs.jaxlib_version }}" >> "$GITHUB_ENV"
+            echo "JAX_VERSION=${{ inputs.jax_version }}" >> "$GITHUB_ENV"
+          else
+            echo "Computing versions from rocm_version and rocm-jax requirements"
+            pip install packaging
+            python build_tools/github_actions/compute_jax_package_version.py \
+              --rocm-version "${{ inputs.rocm_version }}" \
+              --jax-requirements jax/build/requirements.txt
+          fi
 
       - name: Install JAX wheels from package index
         run: |
+          echo "Installing JAX packages:"
+          echo "  JAXLIB_VERSION=${JAXLIB_VERSION}"
+          echo "  JAX_VERSION=${JAX_VERSION}"
           # Install jaxlib/plugin/pjrt from the GPU-family index; install jax from PyPI to match the version
           pip install --index-url "${{ env.WHEEL_INDEX_URL }}" \
-            "jaxlib==${{ env.PACKAGE_VERSION }}" \
-            "jax_rocm7_plugin==${{ env.PACKAGE_VERSION }}" \
-            "jax_rocm7_pjrt==${{ env.PACKAGE_VERSION }}"
-          pip install jax==${{ env.JAX_VERSION }}
+            "jaxlib==${JAXLIB_VERSION}" \
+            "jax_rocm7_plugin==${JAXLIB_VERSION}" \
+            "jax_rocm7_pjrt==${JAXLIB_VERSION}"
+          pip install jax==${JAX_VERSION}
 
       - name: Run JAX tests
         run: |
