--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -161,7 +161,7 @@ jobs:
         run: |
           ./external-builds/pytorch/pytorch_torch_repo.py checkout --repo-hashtag nightly
           ./external-builds/pytorch/pytorch_audio_repo.py checkout --repo-hashtag nightly
-          python ./external-builds/pytorch/pytorch_apex_repo.py checkout --repo-hashtag master
+          ./external-builds/pytorch/pytorch_apex_repo.py checkout --repo-hashtag master
           ./external-builds/pytorch/pytorch_vision_repo.py checkout --repo-hashtag nightly
           ./external-builds/pytorch/pytorch_triton_repo.py checkout
 
@@ -169,11 +169,11 @@ jobs:
       - name: Checkout PyTorch Source Repos from stable branch
         if: ${{ inputs.pytorch_git_ref != 'nightly' }}
         run: |
-         ./external-builds/pytorch/pytorch_torch_repo.py checkout --gitrepo-origin https://github.com/ROCm/pytorch.git --repo-hashtag ${{ inputs.pytorch_git_ref }}
-         ./external-builds/pytorch/pytorch_audio_repo.py checkout --require-related-commit
-         ./external-builds/pytorch/pytorch_apex_repo.py checkout --require-related-commit
-         ./external-builds/pytorch/pytorch_vision_repo.py checkout --require-related-commit
-         ./external-builds/pytorch/pytorch_triton_repo.py checkout
+          ./external-builds/pytorch/pytorch_torch_repo.py checkout --gitrepo-origin https://github.com/ROCm/pytorch.git --repo-hashtag ${{ inputs.pytorch_git_ref }}
+          ./external-builds/pytorch/pytorch_audio_repo.py checkout --require-related-commit
+          ./external-builds/pytorch/pytorch_apex_repo.py checkout --require-related-commit
+          ./external-builds/pytorch/pytorch_vision_repo.py checkout --require-related-commit
+          ./external-builds/pytorch/pytorch_triton_repo.py checkout
 
       - name: Create pip cache directory
         run: mkdir -p /tmp/pipcache
