--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,5 @@
 boto3==1.39.15
-pytest==8.3.5
-pytest-subtests==0.10.0
+pytest==9.0.0 # This versions has subtests built-in.
 pytest-check==2.5.3
 pytest-timeout==2.4.0
 perfetto==0.7.0 # Newer versions of perfetto remove support for required GLIBC version.
