Add TODOs for uploading or using codecov

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -45,6 +45,9 @@ jobs:
         python -m pytest -vv \
           --cov --cov-report=term-missing --cov-report=html
 
+    # TODO: upload to AWS S3 instead (so reports are hosted and don't require
+    #       a download step to view).
+    #       We could also use https://about.codecov.io/ instead of custom infra.
     - name: Upload coverage report
       if: always()
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
