--- a/.github/workflows/build_linux_jax_wheels.yml
+++ b/.github/workflows/build_linux_jax_wheels.yml
@@ -45,7 +45,7 @@ on:
       jax_ref:
         description: "rocm-jax repository ref/branch to check out"
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.2"
   workflow_dispatch:
     inputs:
       amdgpu_family:
@@ -104,7 +104,7 @@ on:
       jax_ref:
         description: rocm-jax repository ref/branch to check out
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.2"
 
 permissions:
   id-token: write
@@ -114,9 +114,6 @@ run-name: Build Linux JAX Wheels (${{ inputs.amdgpu_family }}, ${{ inputs.python
 
 jobs:
   build_jax_wheels:
-    strategy:
-      matrix:
-        jax_ref: [rocm-jaxlib-v0.8.0-fixdevtar]
     name: Build Linux JAX Wheels | ${{ inputs.amdgpu_family }} | Python ${{ inputs.python_version }}
     runs-on: ${{ github.repository_owner == 'ROCm' && 'azure-linux-scale-rocm' || 'ubuntu-24.04' }}
     env:
@@ -128,7 +125,7 @@ jobs:
       jaxlib_version: ${{ steps.write_jax_versions.outputs.jaxlib_version }}
       jax_plugin_version: ${{ steps.write_jax_versions.outputs.jax_plugin_version }}
       jax_pjrt_version: ${{ steps.write_jax_versions.outputs.jax_pjrt_version }}
-      jax_ref: ${{ matrix.jax_ref }}
+      jax_ref: ${{ inputs.jax_ref }}
     steps:
       - name: Checkout TheRock
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
