--- a/.github/workflows/release_portable_linux_jax_wheels.yml
+++ b/.github/workflows/release_portable_linux_jax_wheels.yml
@@ -95,8 +95,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.11", "3.12"]
-        jax_ref: ["rocm-jaxlib-v0.8.0"]
+        python_version: ["3.12"]
+        jax_ref: ["rocm-jaxlib-v0.8.2"]
 
     uses: ./.github/workflows/build_linux_jax_wheels.yml
     with:
