Fix typo, collect all tests matching test_*.

--- a/ml-libs/artifact-composable-kernel.toml
+++ b/ml-libs/artifact-composable-kernel.toml
@@ -8,6 +8,6 @@ include = [
 ]
 [components.test."ml-libs/composable_kernel/stage"]
 include = [
-  "bin/test_",
+  "bin/test_*",
 ]
 [components.run."ml-libs/composable_kernel/stage"]
