Add CK (independent of miopen) full build and run a single sample test to TheRock.

--- a/ml-libs/artifact-composable-kernel.toml
+++ b/ml-libs/artifact-composable-kernel.toml
@@ -6,4 +6,8 @@
 include = [
   "share/composable_kernel/**",
 ]
+[components.test."ml-libs/composable_kernel/stage"]
+include = [
+  "bin/test_*",
+]
 [components.run."ml-libs/composable_kernel/stage"]
