--- a/.github/workflows/build_linux_jax_wheels.yml
+++ b/.github/workflows/build_linux_jax_wheels.yml
@@ -45,7 +45,7 @@ on:
       jax_ref:
         description: "rocm-jax repository ref/branch to check out"
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.2-tarfix"
   workflow_dispatch:
     inputs:
       amdgpu_family:
@@ -104,7 +104,7 @@ on:
       jax_ref:
         description: rocm-jax repository ref/branch to check out
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.2-tarfix"
 
 permissions:
   id-token: write
