--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -239,6 +239,7 @@ jobs:
 
       - name: Build Projects
         run: |
+          mkdir -p ${{ env.OUTPUT_DIR }}/build
           cmake --build ${{ env.OUTPUT_DIR }}/build --target therock-archives therock-dist
           cd ${{ env.OUTPUT_DIR }}/build/dist/rocm
           echo "Building ${{ env.DIST_ARCHIVE }}"
