--- a/.github/workflows/release_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/release_portable_linux_pytorch_wheels.yml
@@ -91,6 +91,13 @@ jobs:
       matrix:
         python_version: ["3.11", "3.12", "3.13"]
         pytorch_git_ref: ["release/2.7", "release/2.8", "release/2.9", "release/2.10", "nightly"]
+        include:
+          - pytorch_git_ref: release/2.9
+            python_version: "3.14"
+          - pytorch_git_ref: release/2.10
+            python_version: "3.14"
+          - pytorch_git_ref: nightly
+            python_version: "3.14"
 
     uses: ./.github/workflows/build_portable_linux_pytorch_wheels.yml
     with:
