Add therock-boost to hipSPARSELt and hipBLASLt
This is a requirement to be able to build hipblastlt-client from TheRock
super project.

--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -139,6 +139,7 @@ therock_cmake_subproject_declare(hipBLASLt
   BUILD_DEPS
     hipBLAS-common
     rocm-cmake
+    therock-boost
     therock-googletest
     therock-msgpack-cxx
     ${hipBLASLt_rocRoller_build_deps}
@@ -315,6 +316,7 @@ if(THEROCK_ENABLE_SPARSE)
         rocm-cmake
         hipSPARSE
         rocSPARSE
+        therock-boost
         therock-googletest
         therock-msgpack-cxx
       RUNTIME_DEPS
