--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -57,7 +57,7 @@ if(THEROCK_ENABLE_COMPOSABLE_KERNEL)
 
   therock_cmake_subproject_activate(composable_kernel)
 
-  therock_provide_artifact(composable-kernel
+  therock_provide_artifact(composable_kernel
     DESCRIPTOR artifact-composable-kernel.toml
     COMPONENTS
       dbg
