--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         python -m pytest -vv \
           --cov --cov-report=term-missing --cov-report=html \
-          external-builds/pytorch/tests
+          ../external-builds/pytorch/tests
 
     # TODO: upload to AWS S3 instead (so reports are hosted and don't require
     #       a download step to view).
