--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -92,7 +92,7 @@ on:
         description: rocm-jax repository ref/branch to check out
         required: false
         type: string
-        default: "rocm-jaxlib-v0.8.2-tarfix"
+        default: "rocm-jaxlib-v0.8.2"
       jax_version:
         description: "Base JAX version (e.g. 0.8.0). Leave empty to auto-detect from rocm-jax requirements."
         required: false
@@ -154,7 +154,7 @@ jobs:
         with:
           path: jax
           repository: rocm/rocm-jax
-          ref: ${{ inputs.jax_ref || 'rocm-jaxlib-v0.8.2-tarfix' }}
+          ref: ${{ inputs.jax_ref || 'rocm-jaxlib-v0.8.2' }}
 
       - name: Checkout JAX extended tests repo
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
