--- a/.github/workflows/build_linux_jax_wheels.yml
+++ b/.github/workflows/build_linux_jax_wheels.yml
@@ -168,6 +168,19 @@ jobs:
             --therock-path="${{ inputs.tar_url }}" \
             dist_wheels
 
+      - name: Generate JAX manifest
+        run: |
+          python3 external-builds/jax/generate_jax_manifest.py \
+            --output-dir "${{ env.PACKAGE_DIST_DIR }}" \
+            --artifact-group "jax-wheels" \
+            --rocm-sdk-version "${{ inputs.rocm_version }}" \
+            --amdgpu-family "${{ inputs.amdgpu_family }}" \
+            --therock-tar-url "${{ inputs.tar_url }}" \
+            --jax-dir "${{ github.workspace }}/jax" \
+            --jax-ref "${{ matrix.jax_ref }}"
+          echo "Manifest dir contents:"
+          ls -lah "${{ env.PACKAGE_DIST_DIR }}/manifests"
+
       - name: Extract JAX versions from built wheels
         id: write_jax_versions
         run: |
@@ -185,11 +198,18 @@ jobs:
           aws-region: us-east-2
           role-to-assume: arn:aws:iam::692859939525:role/therock-${{ inputs.release_type }}
 
-      - name: Upload wheels to S3
+      - name: Upload wheels + manifest to S3
         if: ${{ github.repository_owner == 'ROCm' }}
         run: |
-          aws s3 cp ${{ env.PACKAGE_DIST_DIR }}/ s3://${{ env.S3_BUCKET_PY }}/${{ inputs.s3_staging_subdir }}/${{ inputs.amdgpu_family }}/ \
+          # Wheels
+          aws s3 cp "${{ env.PACKAGE_DIST_DIR }}/" \
+            "s3://${{ env.S3_BUCKET_PY }}/${{ inputs.s3_staging_subdir }}/${{ inputs.amdgpu_family }}/" \
             --recursive --exclude "*" --include "*.whl"
+
+          # Manifests
+          aws s3 cp "${{ env.PACKAGE_DIST_DIR }}/manifests/" \
+            "s3://${{ env.S3_BUCKET_PY }}/${{ inputs.s3_staging_subdir }}/${{ inputs.amdgpu_family }}/manifests/" \
+            --recursive --exclude "*" --include "*.json"
 
       - name: (Re-)Generate Python package release index
         if: ${{ github.repository_owner == 'ROCm' }}
