--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -43,8 +43,7 @@ jobs:
       working-directory: build_tools
       run: |
         python -m pytest -vv \
-          --cov --cov-report=term-missing --cov-report=html \
-          ../external-builds/pytorch/tests
+          --cov --cov-report=term-missing --cov-report=html
 
     # TODO: upload to AWS S3 instead (so reports are hosted and don't require
     #       a download step to view).
