--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -210,13 +210,13 @@ jobs:
 
       # TODO: We shouldn't be using a cache on actual release branches, but it
       # really helps for iteration time.
-      - name: Enable cache
-        uses: actions/cache/restore@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
-        with:
-          path: ${{ env.OUTPUT_DIR }}/caches
-          key: portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-${{ github.sha }}
-          restore-keys: |
-            portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-
+      # - name: Enable cache
+      #   uses: actions/cache/restore@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
+      #   with:
+      #     path: ${{ env.OUTPUT_DIR }}/caches
+      #     key: portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-${{ github.sha }}
+      #     restore-keys: |
+      #       portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-
 
       - name: Install the AWS tool
         run: ./dockerfiles/install_awscli.sh
@@ -396,9 +396,9 @@ jobs:
               "native_package_type": "deb"
             }
 
-      - name: Save cache
-        uses: actions/cache/save@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
-        if: ${{ !cancelled() }}
-        with:
-          path: ${{ env.OUTPUT_DIR }}/caches
-          key: portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-${{ github.sha }}
+      # - name: Save cache
+      #   uses: actions/cache/save@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
+      #   if: ${{ !cancelled() }}
+      #   with:
+      #     path: ${{ env.OUTPUT_DIR }}/caches
+      #     key: portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-${{ github.sha }}
