--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -91,15 +91,17 @@ if(THEROCK_ENABLE_COMPILER)
       -DCLANG_ENABLE_STATIC_ANALYZER=OFF
       -DCLANG_ENABLE_CLANGD=OFF
       -DCLANG_TIDY_ENABLE_STATIC_ANALYZER=OFF
-      -DCLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD=ON
-      -DCLANG_TOOL_OFFLOAD_ARCH_BUILD=ON
-      -DOPENMP_ENABLE_LIBOMPTARGET=ON
-      -DLIBOMPTARGET_BUILD_DEVICE_FORTRT=ON
-      -DOFFLOAD_EXTERNAL_PROJECT_UNIFIED_ROCR=ON
-      -DLIBOMPTARGET_EXTERNAL_PROJECT_HSA_PATH=${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/rocr-runtime
-      -DFLANG_RUNTIME_F128_MATH_LIB=libquadmath
-      -DRUNTIMES_amdgcn-amd-amdhsa_LLVM_ENABLE_PER_TARGET_RUNTIME_DIR=ON
-      -DRUNTIMES_amdgcn-amd-amdhsa_LLVM_ENABLE_RUNTIMES=openmp
+      if(NOT WIN32)
+        -DCLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD=ON
+        -DCLANG_TOOL_OFFLOAD_ARCH_BUILD=ON
+        -DOPENMP_ENABLE_LIBOMPTARGET=ON
+        -DLIBOMPTARGET_BUILD_DEVICE_FORTRT=ON
+        -DOFFLOAD_EXTERNAL_PROJECT_UNIFIED_ROCR=ON
+        -DLIBOMPTARGET_EXTERNAL_PROJECT_HSA_PATH=${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/rocr-runtime
+        -DFLANG_RUNTIME_F128_MATH_LIB=libquadmath
+        -DRUNTIMES_amdgcn-amd-amdhsa_LLVM_ENABLE_PER_TARGET_RUNTIME_DIR=ON
+        -DRUNTIMES_amdgcn-amd-amdhsa_LLVM_ENABLE_RUNTIMES=openmp
+      endif()
       # ASAN features.
       # Note that building AMDGPU ASAN extensions depends on various runtime headers
       # (since it instruments them). These paths must line up and will be an error
