Add test as a compnent for the artifacts.

--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -65,6 +65,7 @@ if(THEROCK_ENABLE_COMPOSABLE_KERNEL)
       doc
       lib
       run
+      test
     SUBPROJECT_DEPS
       composable_kernel
   )
