--- a/.github/workflows/multi_arch_build_portable_linux_artifacts.yml
+++ b/.github/workflows/multi_arch_build_portable_linux_artifacts.yml
@@ -119,6 +119,10 @@ jobs:
         if: ${{ steps.stage_config.outputs.pip_install_cmd }}
         run: pip install ${{ steps.stage_config.outputs.pip_install_cmd }}
 
+      # TODO: Move --preset into configure_stage.py OR resolve
+      # https://github.com/ROCm/TheRock/issues/1781 in
+      # build_tools/github_actions/amdgpu_family_matrix.py so
+      # the `linux-release-package` preset is used instead of empty string
       - name: Configure
         run: |
           cmake -B "${BUILD_DIR}" -S . -GNinja \
