Adding back ninja

--- a/.github/actions/setup_test_environment/action.yml
+++ b/.github/actions/setup_test_environment/action.yml
@@ -53,6 +53,12 @@ runs:
         uv pip install -r requirements-test.txt
         uv pip freeze
 
+    - name: Install Choco tools
+      if: ${{ runner.os == 'Windows' }}
+      shell: bash
+      run: |
+        choco install --no-progress -y ninja
+
     - name: Download and Unpack Artifacts
       shell: bash
       env:
