Pass THEROCK_DIST_AMDGPU_TARGETS to ROCPROFSYS_GFX_TARGETS and handle the defensive value

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -224,7 +224,11 @@ endif(THEROCK_BUILD_TESTING)
   # Skip enabling rocprofiler-systems when building with sanitizers.
   if (THEROCK_ENABLE_ROCPROFSYS AND THEROCK_SANITIZER STREQUAL "")
     # Escape semicolons in GPU targets list to prevent shell interpretation
-    string(REPLACE ";" "\\;" _ROCPROFSYS_GFX_TARGETS_ESCAPED "${THEROCK_AMDGPU_TARGETS}")
+    if (THEROCK_DIST_AMDGPU_TARGETS STREQUAL "THEROCK_DIST_AMDGPU_TARGETS-NOTFOUND")
+      set(_ROCPROFSYS_GFX_TARGETS_ESCAPED "")
+    else()
+      string(REPLACE ";" "\\;" _ROCPROFSYS_GFX_TARGETS_ESCAPED "${THEROCK_DIST_AMDGPU_TARGETS}")
+    endif()
 
     therock_cmake_subproject_declare(rocprofiler-systems
       USE_DIST_AMDGPU_TARGETS
